# crew-Agents

crw_1_litellm/: README.md  info.txt  poem.txt  pyproject.toml
crw_1_litellm/src/crw_1_litellm/: main.py  main1.py
crw_3_multiple_agents_with_yaml/: README.md  pyproject.toml
crw_3_multiple_agents_with_yaml/src/crw_3_multiple_agents_with_yaml/: main.py  main1.py
crw_3_multiple_agents_with_yaml/src/crw_3_multiple_agents_with_yaml/crews/poem_crew/dev_crew/: dev_crew.py
crw_3_multiple_agents_with_yaml/src/crw_3_multiple_agents_with_yaml/crews/poem_crew/dev_crew/config/: agents.yaml  tasks.yaml
