[project]
name = "crw_1_litellm"
version = "0.1.0"
description = "crw-1-litellm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "crw_1_litellm.main:kickoff"
plot = "crw_1_litellm.main:plot"
go-llm = "crw_1_litellm.main1:run_litellm_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
