[project]
name = "crw_3_multiple_agents_with_yaml"
version = "0.1.0"
description = "crw-3-multiple-agents-with-yaml using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "crw_3_multiple_agents_with_yaml.main:kickoff"
plot = "crw_3_multiple_agents_with_yaml.main:plot"
multi-agents = "crw_3_multiple_agents_with_yaml.main1:kickoff" 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
